--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,21 +1,6 @@
-@font-face {
-  font-family: 'inter-regular';
-  src: url('../assets/fonts/inter-regular.ttf') format('ttf');
-}
-
-@font-face {
-  font-family: 'inter-semibold';
-  src: url('../assets/fonts/inter-semibold.ttf') format('ttf');
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
 body{
-  font-family: 'inter-regular', sans-serif;
+  font-family: 'Inter';
   color: white;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code{
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'inter-regular',
-    monospace;
 }
