--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,9 @@
-
-body{
-  background-color: black;
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .container{
@@ -24,7 +27,12 @@ body{
   font-size: 36px;
 }
 
+.part1, .part2{
+  margin-block: 1%;
+}
+
 .part3{
   font-weight: normal;
   font-size: 40px;
+  margin-top: 15%;
 }
