--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -6,32 +7,33 @@ body, html {
   overflow: hidden;
 }
 
-.container{
+.container {
   margin-top: 5%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
 }
 
-.introduction{
+.introduction {
   justify-content: left;
 }
 
-.part1{
+.part1 {
   font-weight: bolder;
   font-size: 70px;
 }
 
-.part2{
+.part2 {
   font-weight: lighter;
   font-size: 36px;
 }
 
-.part1, .part2{
+.part1,
+.part2 {
   margin-block: 1%;
 }
 
-.part3{
+.part3 {
   font-weight: normal;
   font-size: 40px;
   margin-top: 15%;
