--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,41 @@
-body, html {
+body,
+html {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+.projects-list {
+  margin-top: 3%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding: 5%;
+  border: 2px solid gray;
+  align-items: center;
+}
+.project{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.left-box{
+  width: 50%;
+  height: 100%;
+}
+.right-box{
+  width: 50%;
+  height: 100%;
+}
+.link{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.p1,
+.p2 {
+  margin-block: 1%;
+}
+.p3 {
+  margin-top: 5%;
 }
