--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,10 +1,9 @@
 .header{
+  width: 100%;
   margin-top: 2%;
   display:flex;
   align-items: center;
   justify-content: space-between;
-  padding-right: 15%;
-  padding-left: 3%;
 }
 
 span{
